# razz

./: cargo.toml
razz/: Cargo.toml
razz/src/: compute.wgsl  cpu.rs  gpu.rs  main.rs  render.wgsl  texture.rs
razz_lib/: Cargo.toml
razz_lib/src/: camera.rs  image.rs  lib.rs  material.rs  noise.rs  primative.rs  render.rs  sampler.rs  texture.rs  traits.rs
razz_lib/src/shape/: mesh.rs  mod.rs  sphere.rs
