[package]
name = "razz"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
razz_lib = { path = "../razz_lib" }

rand = "0.8.4"
glam = { version = "0.17.3", features = ["rand"] }
image = "0.23"
winit = "0.25.0"
wgpu = "0.9.0"
pollster = "0.2.4"
anyhow = "1.0"
