[package]
name = "razz_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxtree = { git = "https://github.com/jgrazian/boxtree" }
rand = "0.8.4"
glam = { version = "0.17.3", features = ["rand"] }
slotmap = "1.0.5"
rayon = "1.5"
